--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <option value="rakuten">楽天市場</option>
                     <option value="mercari">メルカリ</option>
                     <option value="dmm">DMM</option>
-                    <option value="alibaba">アリババ</option>
+                    <option value="alibaba">アリババ(中国のアマゾン)</option>
                 </select>
             </div>
             <div class="tab-content" id="sns">
@@ -123,7 +123,7 @@
                     <option value="niconico">ニコニコ動画</option>
                     <option value="youtube">YouTube</option>
                     <option value="dailymotion">Dailymotion</option>
-                    <option value="bilibili">bilibili</option>
+                    <option value="bilibili">bilibili（中国のニコニコのような動画サイト）</option>
                 </select>
             </div>
             <div class="tab-content" id="discussion">
@@ -140,7 +140,7 @@
                     <option value="pixiv-dic">ピクシブ百科事典</option>
                     <option value="weblio">Weblio英和・和英辞書</option>
                     <option value="kotobank">コトバンク</option>
-                    <option value="wiktionary">ウィクショナリー</option>
+                    <option value="wiktionary">ウィクショナリー辞書</option>
                 </select>
             </div>
             <div class="tab-content" id="academic">
@@ -152,8 +152,9 @@
                 <select id="ai-service-select">
                     <option value="chatgpt">ChatGPT</option>
                     <option value="perplexity">Perplexity</option>
-                    <option value="genspark">Genspark</option>
-                    <option value="felo">Felo</option>
+                    <option value="genspark">Genspark（Perplexityよりい詳しく調べる）</option>
+                    <option value="felo">Felo（日本版Perplexity）</option>
+                    <option value="wolframalpha">wolframalpha(計算AI)</option>
                 </select>
             </div>
         </div>
