--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <button class="tab-button" data-tab="discussion">ディスカッション</button>
             <button class="tab-button" data-tab="dictionary">辞書</button>
             <button class="tab-button" data-tab="academic">論文</button>
+            <button class="tab-button" data-tab="travel">翻訳</button>
             <button class="tab-button" data-tab="ai">AI</button>
         </div>
         <div class="search-content">
@@ -146,6 +147,18 @@
             <div class="tab-content" id="academic">
                 <select id="academic-service-select">
                     <option value="google-scholar">Google Scholar</option>
+                </select>
+            </div>
+            <div class="tab-content" id="travel">
+                <select id="travel-service-select">
+                    <option value="google-Translation?-JA">Google 翻訳(言語を検出→日)</option>
+                    <option value="google-Translation?-EN">Google 翻訳(言語を検出→英)</option>
+                    <option value="google-Translation?-DE">Google 翻訳(言語を検出→独)</option>
+                    <option value="google-Translation?-FR">Google 翻訳(言語を検出→仏)</option>
+
+                    <option value="google-Translation?-KR">Google 翻訳(言語を検出→韓)</option>
+                    <option value="google-Translation?-zh-CN">Google 翻訳(言語を検出→中簡体)</option>
+                    <option value="google-Translation?-zh-TW">Google 翻訳(言語を検出→中TW)</option>
                 </select>
             </div>
             <div class="tab-content" id="ai">
