--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <option value="google-Translation?-EN">Google 翻訳(言語を検出→英)</option>
                     <option value="google-Translation?-DE">Google 翻訳(言語を検出→独)</option>
                     <option value="google-Translation?-FR">Google 翻訳(言語を検出→仏)</option>
-
+                    <option value="google-Translation?-IT">Google 翻訳(言語を検出→伊)</option>
                     <option value="google-Translation?-KR">Google 翻訳(言語を検出→韓)</option>
                     <option value="google-Translation?-zh-CN">Google 翻訳(言語を検出→中簡体)</option>
                     <option value="google-Translation?-zh-TW">Google 翻訳(言語を検出→中TW)</option>
