--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
             <div class="tab-content" id="academic">
                 <select id="academic-service-select">
                     <option value="google-scholar">Google Scholar</option>
+                    <option value="CiNii Articles">CiNii Articles</option>
                 </select>
+
             </div>
             <div class="tab-content" id="travel">
                 <select id="travel-service-select">
