--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <select id="ai-service-select">
                     <option value="chatgpt">ChatGPT</option>
                     <option value="perplexity">Perplexity</option>
-                    <option value="genspark">Genspark（Perplexityよりい詳しく調べる）</option>
+                    <option value="genspark">Genspark（Perplexityより詳しく調べる）</option>
                     <option value="felo">Felo（日本版Perplexity）</option>
                     <option value="wolframalpha">wolframalpha(計算AI)</option>
                 </select>
