--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                     <option value="braveimage">Brave Search画像検索</option>
                     <option value="exciteimag">Excite画像検索</option>
                 </select>
-
+            </div>
             <div class="tab-content" id="music">
                 <select id="music-service-select">
                     <option value="spotify">Spotify</option>
